# fips-vld

./: .gitmodules  CMakeLists.txt  README.md  fips.yml
fips-configs/: win32-vstudio-vld.yml  win64-vstudio-vld.yml
lib/win32/: vld.lib
lib/win64/: vld.lib
